# ChangeLog for dev-perl/Devel-StackTrace
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-StackTrace/ChangeLog,v 1.52 2009/06/29 23:35:29 jer Exp $

  29 Jun 2009; Jeroen Roovers <jer@gentoo.org> Devel-StackTrace-1.18.ebuild:
  Stable for HPPA too.

  30 Dec 2008; Torsten Veller <tove@gentoo.org>
  -Devel-StackTrace-1.19.ebuild, -Devel-StackTrace-1.19.02.ebuild:
  Cleanup

  18 Nov 2008; Torsten Veller <tove@gentoo.org>
  Devel-StackTrace-1.15.ebuild, Devel-StackTrace-1.18.ebuild,
  Devel-StackTrace-1.19.ebuild, Devel-StackTrace-1.19.02.ebuild,
  Devel-StackTrace-1.20.ebuild:
  New virtuals: module-build

*Devel-StackTrace-1.20 (26 Oct 2008)

  26 Oct 2008; Torsten Veller <tove@gentoo.org>
  +Devel-StackTrace-1.20.ebuild:
  Version bump

  07 Sep 2008; Torsten Veller <tove@gentoo.org>
  -Devel-StackTrace-1.12.ebuild, -Devel-StackTrace-1.13.ebuild,
  -Devel-StackTrace-1.14.ebuild:
  Cleanup

*Devel-StackTrace-1.19.02 (07 Sep 2008)

  07 Sep 2008; Torsten Veller <tove@gentoo.org>
  +Devel-StackTrace-1.19.02.ebuild:
  Version bump

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  Devel-StackTrace-1.18.ebuild:
  alpha/ia64/sparc/x86 stable

*Devel-StackTrace-1.19 (01 Jul 2008)

  01 Jul 2008; wrobel@gentoo.org +Devel-StackTrace-1.19.ebuild:
  Added Devel-StackTrace-1.19 required for rt-3.6.7 (sec issue #230007).

*Devel-StackTrace-1.18 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Devel-StackTrace-1.18.ebuild:
  Version bump

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Devel-StackTrace-1.15.ebuild:
  Stable for HPPA too.

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Devel-StackTrace-1.15.ebuild:
  Stable on ppc.

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  Devel-StackTrace-1.15.ebuild:
  alpha/ia64/x86 stable

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Devel-StackTrace-1.14.ebuild, Devel-StackTrace-1.15.ebuild:
  Marking sparc stable
