@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Devel-StackTrace
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-StackTrace/ChangeLog,v 1.52 2009/06/29 23:35:29 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-StackTrace/ChangeLog,v 1.53 2009/07/02 10:17:59 tove Exp $
+
+*Devel-StackTrace-1.21 (02 Jul 2009)
+
+  02 Jul 2009; Torsten Veller <tove@gentoo.org>
+  +Devel-StackTrace-1.21.ebuild:
+  Version bump
 
   29 Jun 2009; Jeroen Roovers <jer@gentoo.org> Devel-StackTrace-1.18.ebuild:
   Stable for HPPA too.
